[tool.poetry]
name = "tableau-delete-all-session"
version = "0.1.0"
description = ""
authors = ["Allen Chen <allencc77e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.14.0"
beautifulsoup4 = "^4.12.2"
webdriver-manager = "^4.0.1"
lxml = "4.9.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
