[tool.poetry]
name = "tableau-delete-all-session"
version = "0.1.0"
description = ""
authors = ["Allen Chen <allencc77e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <3.13"
selenium = "^4.11.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
lxml = "4.9.2"
pyinstaller = "^5.13.2"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
